<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Aplicativo Lista VIP Android</string>
    <string name="tat_hint_primeiro_nome">Primeiro Nome</string>
    <string name="tat_hint_sobrenome">Sobrenome</string>
    <string name="txt_hint_nome_do_curso">Nome do Curso</string>
    <string name="txt_hint_telefone_de_contato">Telefone de contato</string>
    <string name="botao_limpar">LIMPAR</string>
    <string name="botao_salvar">SALVAR</string>
    <string name="botao_finalizar">FINALIZAR</string>
</resources>